[build-system]
requires = ["setuptools"] # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[project.scripts]
spatial_axis = "spatial_axis.main:app"

[project]
name = "spatial_axis"
version = "0.1.0"
description = "Define relative positioning of cells along a spatial axis"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
]
maintainers = [
]
keywords = ["spatial-biology", "cell-analysis", "spatial-axis", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "numpy",
    "scikit-image",
    "scipy",
    "geopandas", 
    "shapely",
    "rasterio",
    "anndata",
    "pandas",
    ]

[project.optional-dependencies]
dev = ["black", "isort", "ruff"]
test = ["coverage"]